--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -1,12 +1,15 @@
-:icons:
-== Phonemarket
+= Phonemarket
 
-=== Description
 Plugin permettant d'envoyer des SMS et de passer des appels avec message automatique a partir de Jeedom. 
 
-[icon="../images/plugin/important.png"]
 [IMPORTANT]
 Ce plugin passe par le market c'est donc un service cloud qui necessite une connexion internet pour fonctionner
+
+[TIP]
+Le plugin marche sur un système de crédit, 1 SMS = 1 crédit, 1 appels = 2 crédits. Vous pouvez consulter votre crédit http://market.jeedom.fr/index.php?v=d&p=profils&tab=sms[ici]. En cas de crédits faible (moins de 5), un mail vous sera envoyé
+
+[IMPORTANT]
+Les SMS sont limités à 140 caractères et les appels à 450 caractères
 
 '''
 include::configuration.asciidoc[]
