--- a/doc/de_DE/configuration.asciidoc
+++ b/doc/de_DE/configuration.asciidoc
@@ -1,16 +1,16 @@
 == Plugin Konfiguration
 
-Après téléchargement du plugin, il vous suffit juste d'activer celui-ci, il n'y a aucune configuration à ce niveau.
+Nachdem das Plugin heruntergeladen ist, müssen Sie es nur aktivieren, es gibt keine Konfiguration auf dieser Ebene.
 
 image::../images/phonemarket1.PNG[]
 
 == Geräte Konfiguration
 
-La configuration des équipements Phonemarket est accessible à partir du menu plugin : 
+Die Konfiguration von Phonemarket-Geräten ist in dem Plugin-Menü verfügbar : 
 
 image::../images/phonemarket2.PNG[]
 
-Voilà à quoi ressemble la page du plugin Phonemarket (ici avec déjà 1 équipement) : 
+Das sieht wie die Phonemarket Plugin-Seite aus (hier bereits mit 1 Gerät) : 
 
 image::../images/phonemarket3.PNG[]
 
