--- a/doc/de_DE/changelog.asciidoc
+++ b/doc/de_DE/changelog.asciidoc
@@ -1,1 +1,1 @@
-Changelog détaillé : https://github.com/jeedom/plugin-phonemarket/commits/stable
+Detailliertes Änderungsprotokoll : https://github.com/jeedom/plugin-phonemarket/commits/stable
