[ROBOT] Action all

--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -5,7 +5,7 @@
         "Mes équipements market phone": "Mes équipements market phone",
         "Général": "Principale",
         "Nom de l'équipement phonemarket": "Nom de l'équipement phonemarket",
-        "Nom de l'équipement template": "Nom de l'équipement template",
+        "Nom de l'équipement template": "Nome di attrezzature template",
         "Objet parent": "Oggetto padre",
         "Aucun": "Nessuno",
         "Activer": "Attivare",
